# rag-chatbot

./: .env.example  .gitignore  .replit  Dockerfile  README.md  deploy.bat  deploy.sh  docker-compose.yml  pyproject.toml  replit.md  requirements.txt  sessions.json  setup.py
backend/: auth.py  chat.py  config.py  main.py  models.py  pdf_handler.py  session_manager.py
frontend/: Dockerfile  netlify.toml
frontend/src/: App.css  App.jsx  api.js  config.js
frontend/src/components/: Chat.jsx  Login.jsx  Signup.jsx
